# car-sharing-case-study

./: README.md  pyproject.toml
data/: sample_data.csv
notebooks/: example.ipynb  lp_example.ipynb
src/: data_synthesizer.py  ga.py  synthetic_data_generation.py
